--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    color: rgba(247, 1, 1, 0.788);
+    color: rgba(255, 255, 255, 0.788);
     background: black;
     margin: 0px;
 }
@@ -9,4 +9,18 @@ header {
     padding: 20px;
     font-size: 32px;
     color: rgb(42, 228, 57);
+}
+
+section{
+background: rgb(122, 234, 28);
+padding-bottom: 80px;
+padding-top: 80px;
+display: flex;
+justify-content:center;
+
+}
+
+.texto-chamada{
+    margin-right: 5%;
+
 }
