--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     color: rgba(255, 255, 255, 0.788);
     background: black;
     margin: 0px;
+    font-family: "Chakra Petch", sans-serif;
 }
 
 header {
